<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="itri460778@itri.org.tw">harrison</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend> -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>
